[package]
name = "codeforge"
version = "0.1.0"
authors = ["Andrey Chervyakov <cognioandrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.8.2"
config = { version = "0.10.1", features = ["toml"] }
pretty_env_logger = "0.4.0"